--- a/Android application/app/src/main/AndroidManifest.xml
+++ b/Android application/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.noanandroidapplication">
+    package="com.example.noanandroidapplication"
+    >
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -9,6 +11,8 @@
     <uses-feature
         android:name="android.software.leanback"
         android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +33,8 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.ModeActivity" />
+        <activity android:name=".controller.ModeSelectionActivity" />
+        <activity android:name=".controller.WebFrameActivity" />
         <activity android:name=".DetailsActivity" />
         <activity android:name=".PlaybackActivity" />
         <activity android:name=".BrowseErrorActivity" />
