--- a/Android application/app/src/main/AndroidManifest.xml
+++ b/Android application/app/src/main/AndroidManifest.xml
@@ -33,8 +33,14 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".controller.ModeSelectionActivity" />
         <activity android:name=".controller.WebFrameActivity" />
+        <activity android:name=".controller.NoanFrameActivity" />
+        <activity android:name=".controller.AnalogFrameActivity" />
+        <activity android:name=".controller.IpFrameActivity" />
+
+
         <activity android:name=".DetailsActivity" />
         <activity android:name=".PlaybackActivity" />
         <activity android:name=".BrowseErrorActivity" />
