--- a/Web API/package.json
+++ b/Web API/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
