--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ jobs:
         provider: heroku
         api_key:
           secure: 3aa3d8b6-9a22-49db-bb97-2c7fa1d6a847
-        app: web-api
-        on: PFE-E2020\web-api
+        app: PFE-E2020\web-api
+        on: webapimaster
