--- a/Android application/app/build.gradle
+++ b/Android application/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
