--- a/Android application/app/build.gradle
+++ b/Android application/app/build.gradle
@@ -8,8 +8,9 @@ android {
 
     defaultConfig {
         applicationId "com.example.noanandroidapplication"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 19
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
 
@@ -32,4 +33,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
