--- a/Android application/app/build.gradle
+++ b/Android application/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation files('libs/frameworks.jar')
+    implementation files('libs/tvmiddleware.jar')
 }
