--- a/Android application/app/src/main/AndroidManifest.xml
+++ b/Android application/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.example.noanandroidapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="false" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -18,8 +21,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
-        <activity android:name="com.azuredev.android.TestActivity">
-        </activity>
         <activity
             android:name="com.azuredev.android.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
