--- a/Android application/app/build.gradle
+++ b/Android application/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation files('libs/frameworks.jar')
+    implementation files('libs/tvmiddleware.jar')
 }
